[package]
name = "luhnr"
description = "a simple, but efficient, luhn number generator and validator"
documentation = "https://github.com/robpickerill/luhnr/blob/main/README.md"
readme = "README.md"
homepage = "https://github.com/robpickerill/luhnr/"
repository = "https://github.com/robpickerill/luhnr/"
keywords = ["luhn", "mod10", "modulus10"]
license = "MIT OR Apache-2.0"
version = "0.3.4"
edition = "2021"

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "luhn_benchmark"
harness = false
